<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sign_up"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
         />

    <EditText
        android:id="@+id/etSEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="229dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etSPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="303dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etSConfPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="387dp" />

    <Button
        android:id="@+id/btnSign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/Sign_up"
        android:textColor="#FFFFFFFF"
        android:background="@drawable/btn_background"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="14dp"
        tools:layout_editor_absoluteY="462dp" />

    <TextView
        android:id="@+id/tvRedirectLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/already_have_an_account_login"
        android:textColor="#18206F"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="-13dp"
        tools:layout_editor_absoluteY="518dp"
        tools:ignore="MissingConstraints" />
</LinearLayout>