<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_timesheet"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp"
        android:paddingBottom="0dp">


        <RelativeLayout
            android:layout_width="383dp"
            android:layout_height="111dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="140dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@color/blue"
                android:padding="5dp"
                app:srcCompat="@drawable/baseline_3p_24"
                app:strokeColor="@color/black"
                app:strokeWidth="5dp" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:alpha="0.8"
            android:text="@string/fill_the_details_below"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="10dp"
            android:text="@string/task_category"
            tools:ignore="MissingPrefix" />


        <EditText
            android:id="@+id/addTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/task_description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/addTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/task_date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/taskDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/task_start_time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/taskTime"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="20dp"
            android:text="@string/task_end_time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/taskendTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="14sp"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/addTaskbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_background"
            android:text="@string/add_task"
            android:textColor="@color/white" />



    </LinearLayout>
</ScrollView>

