<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    tools:context=".Add_Task">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time_tracker"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                fontPath="fonts/nunito_extra_bold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_tasks"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_task"/>

        </FrameLayout>
        <Button
            android:id="@+id/addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/btn_background"
            android:text="Add task"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dailyGoals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/add_daily_goals"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/view_graphs"
            android:textColor="@color/white" />



    </LinearLayout>

</LinearLayout>