<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AllCategories"
    android:background="@color/lightWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/categories_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="10dp"
                android:text="@string/categories"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignBaseline="@+id/categories_text"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/timer_button_description"
                app:srcCompat="@drawable/baseline_timer_24" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/Prog"
                    android:textColor="#ECEAEA"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_task_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="-10dp"
                    android:background="#00000000"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/add_task"
                    android:textColor="#ECEAEA" />

                <Button
                    android:id="@+id/total_hours_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/categories_prog"
                android:layout_marginTop="-30dp"
                android:contentDescription="TODO" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/INRS"
                    android:textColor="#ECEAEA"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/add_task_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/add_task" />

                <Button
                    android:id="@+id/total_hours_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <ImageView
                android:layout_width="105dp"
                android:layout_height="91dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:src="@drawable/categories_inrs" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_margin="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/OPSC"
                    android:textColor="#ECEAEA"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_task_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/add_task" />

                <Button
                    android:id="@+id/total_hours_button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <ImageView
                android:layout_width="86dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/categories_opsc"
                android:contentDescription="TODO" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/categories_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:padding="20dp"
                    android:text="@string/IPMA"
                    android:textColor="#ECEAEA"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/add_task_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/add_task" />

                <Button
                    android:id="@+id/total_hours_button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="-3dp"
                    android:background="#00000000"
                    android:textColor="#ECEAEA"
                    android:fontFamily="serif"
                    android:padding="10dp"
                    android:text="@string/Total_hours"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="70dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="-2dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/categories_ipma"
                android:contentDescription="TODO" />
        </RelativeLayout>

        <Button
            android:id="@+id/Graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_background"
            android:text="Pomodoro"
            android:textColor="@color/white"
            android:contentDescription="@string/pomodoro_button_description"/>

    </LinearLayout>

</ScrollView>
